--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: go
+
 go:
-  - 1.6.2
-  - tip
+  - "1.12"
+
+env:
+  global:
+    GO111MODULE=on
 
 sudo: false
-
-matrix:
-  allow_failures:
-    - go: tip
